# plugin-template

./: .gitignore  Cargo.toml  EXAMPLES.md  LICENSE  README.md  plugin.toml
.github/workflows/: build.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.tsx
migrations/: 001_initial.sql
src/: lib.rs  plugin.rs
