[package]
name = "example-plugin"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An example plugin template for TimeTracker"
license = "MIT"
repository = "https://github.com/your-username/your-plugin-name"

[lib]
name = "example_plugin_backend"
crate-type = ["cdylib"]  # Dynamic library for plugin loading

[dependencies]
# Plugin SDK - this provides the Plugin trait and API interfaces
# Note: In a real plugin, you would add this as a dependency pointing to the SDK
# For the template, we'll use a placeholder that matches the actual SDK structure
# time-tracker-plugin-sdk = { path = "../plugin-sdk" }  # Uncomment and adjust path when using
time-tracker-plugin-sdk = { git = "https://github.com/bthos/time-tracker-app", package = "time-tracker-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1