[package]
name = "example-plugin"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An example plugin template for TimeTracker"
license = "MIT"
repository = "https://github.com/your-username/your-plugin-name"

[lib]
name = "example_plugin_backend"
crate-type = ["cdylib"]  # Dynamic library for plugin loading

[dependencies]
time-tracker-plugin-sdk = "0.2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
